--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/googlemaps": "^3.30.8",
+    "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "leaflet": "^1.3.1",
+    "mapbox": "^1.0.0-beta10",
     "primeng": "^5.2.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
