--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@types/googlemaps": "^3.30.8",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.3.1",
     "mapbox": "^1.0.0-beta10",
@@ -34,13 +36,14 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
     "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
