--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
     "@angular/animations": "^5.2.9",
     "@angular/cdk": "^5.2.4",
     "@angular/common": "^5.2.0",
@@ -29,6 +29,7 @@
     "@types/googlemaps": "^3.30.8",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "hammerjs": "^2.0.8",
     "leaflet": "^1.3.1",
     "mapbox": "^1.0.0-beta10",
@@ -38,9 +39,9 @@
     "typescript": "~2.5.3"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.0",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
+    "@angular/cli": "~1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -53,6 +54,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
+    "enhanced-resolve": "^3.3.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
